--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Murtaza Anverali",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2"
